--- a/src/app/MainPage/vertical.card.component2.css
+++ b/src/app/MainPage/vertical.card.component2.css
@@ -1,6 +1,6 @@
 /*card object*/
 div.card.mb-3{
-    left: 400px;
+    left: 300px;
     background-color: rgb(39,37,34);
     color: white;
     max-width: 1000px;
