--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -3,3 +3,17 @@ body{
     
 }
 
+div{
+    margin: 0;
+}
+
+p{
+    font-family:  Arial, Verdana, sans-serif;
+    font-weight: bold;
+    color: white;
+    text-align: center;
+    padding-top:30px;
+    padding-bottom: 30px;
+    font-size: 35px;
+}
+
